Closed Bug 1927290 Opened 7 days ago Closed 3 days ago

Blank message pane for partially downloaded messages (POP3 "Fetch headers only")

Categories

(MailNews Core :: MIME, defect)

Thunderbird 132
defect

Tracking

(thunderbird_esr128 unaffected, thunderbird132 affected, thunderbird133 affected)

RESOLVED FIXED
134 Branch
Tracking Status
thunderbird_esr128 --- unaffected
thunderbird132 --- affected
thunderbird133 --- affected

People

(Reporter: welpy-cw, Assigned: welpy-cw)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

  1. Set up a POP3 mail account with "Fetch headers only" enabled.
  2. Receive a new message and select it.
  3. Try to download the message body by clicking on the link in the message pane.

Expected result:
After step 2, the message pane shows "Not Downloaded — Only the headers for this message were downloaded from the mail server." Clicking the link "Download the rest of the message." below does exactly that.

Actual result:
After step 2, the message pane is blank. It is not possible to get the body of the message.

Backing out https://hg.mozilla.org/comm-central/rev/b492a2fe9f56f465e5de13a3ab0b27d52caae7a5 and https://hg.mozilla.org/comm-central/rev/2f426872727b424d5105eeccd0b237a37eece257 appears to restore the functionality.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
See Also: → 1928069

Could this please get manually QA'd after it lands?
I haven't tested the fix.
Thanks

thanks to Toby for suggesting that we do a try run first.

https://treeherder.mozilla.org/jobs?repo=try-comm-central&revision=02d03af761fb13e154824cbeca3dbba9b29280bc

Given that the original regression wasn't caught by a test, I doubt that this try run will show any failures, but it's a good idea to do it anyway.

Pushed by arschmitz@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/6ba58119c62f
Fix recent regression affecting partial messages. r=kaie

Status: ASSIGNED → RESOLVED
Closed: 3 days ago
Resolution: --- → FIXED
Target Milestone: --- → 134 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: