Bug 1927290 - Fix recent regression affecting partial messages. r=kaie

Differential Revision: https://phabricator.services.mozilla.com/D226983

--HG--
extra : moz-landing-system : lando